--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+body {
+  background-image: url('https://marketplace.canva.com/EAFCO6pfthY/1/0/1600w/canva-blue-green-watercolor-linktree-background-F2CyNS5sQdM.jpg');
+}
+</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login Page</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="login-container">
+    <h2>Login</h2>
+    <form action="#">
+      <div class="form-group">
+        <label for="username"><br><b>Username:</b><br></label><br>
+        <input type="text" id="username" name="username" required>
+      </div>
+      <div class="form-group">
+        <label for="password"><br><b>Password:</b><br></label><br>
+        <input type="password" id="password" name="password" required>
+      </div><br>
+      <button type="submit">Login</button>
+    </form>
+  </div>
+</body>
+</html>
 
